// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`TWAMM #claimEarnings gas 1`] = `
Object {
  "calldataByteLength": 100,
  "gasUsed": 32133,
}
`;

exports[`TWAMM #executeTWAMMOrders both pools selling one interval gas 1`] = `
Object {
  "calldataByteLength": 228,
  "gasUsed": 269109,
}
`;

exports[`TWAMM #executeTWAMMOrders both pools selling three intervals gas 1`] = `
Object {
  "calldataByteLength": 228,
  "gasUsed": 427608,
}
`;

exports[`TWAMM #executeTWAMMOrders both pools selling two intervals gas 1`] = `
Object {
  "calldataByteLength": 228,
  "gasUsed": 387441,
}
`;

exports[`TWAMM #executeTWAMMOrders single pool sell one interval gas 1`] = `
Object {
  "calldataByteLength": 228,
  "gasUsed": 111299,
}
`;

exports[`TWAMM #executeTWAMMOrders single pool sell three intervals gas 1`] = `
Object {
  "calldataByteLength": 228,
  "gasUsed": 167521,
}
`;

exports[`TWAMM #executeTWAMMOrders single pool sell two intervals gas 1`] = `
Object {
  "calldataByteLength": 228,
  "gasUsed": 146094,
}
`;

exports[`TWAMM #modifyLongTermOrder gas 1`] = `
Object {
  "calldataByteLength": 132,
  "gasUsed": 38669,
}
`;

exports[`TWAMM #submitLongTermOrder gas 1`] = `
Object {
  "calldataByteLength": 132,
  "gasUsed": 123391,
}
`;

exports[`TWAMM end-to-end simulation single pool sell tests gas zeroForOne=false 1`] = `
Object {
  "calldataByteLength": 228,
  "gasUsed": 109284,
}
`;

exports[`TWAMM end-to-end simulation single pool sell tests gas zeroForOne=true 1`] = `
Object {
  "calldataByteLength": 228,
  "gasUsed": 98098,
}
`;
